--- a/package.json
+++ b/package.json
@@ -1,52 +1,27 @@
 {
-  
   "dependencies": {
-  
-    
-  "express": "^4.18.1",
-  
-    
-  "node": "^18.7.0"
-  
+    "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
+    "node": "^18.7.0",
+    "socket.io": "^4.5.1"
   },
-  
   "name": "32065_tarriorodrigo_destileriabo",
-  
   "version": "1.0.0",
-  
   "main": "index.js",
-  
   "scripts": {
-  
-    
-  "test": "echo \"Error: no test specified\" && exit 1"
-  
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/main.js"
   },
-  
   "repository": {
-  
-    
-  "type": "git",
-  
-    
-  "url": "git+https://github.com/rodrigoatg/32065_TarrioRodrigo_DestileriaBo.git"
-  
+    "type": "git",
+    "url": "git+https://github.com/rodrigoatg/32065_TarrioRodrigo_DestileriaBo.git"
   },
-  
   "keywords": [],
-  
   "author": "",
-  
   "license": "ISC",
-  
   "bugs": {
-  
-    
-  "url": "https://github.com/rodrigoatg/32065_TarrioRodrigo_DestileriaBo/issues"
-  
+    "url": "https://github.com/rodrigoatg/32065_TarrioRodrigo_DestileriaBo/issues"
   },
-  
   "homepage": "https://github.com/rodrigoatg/32065_TarrioRodrigo_DestileriaBo#readme",
-  
   "description": ""
 }
